feat(openapi): update OpenAPI specs for delete and get products endpoint
