# src/main/resources/openapi/openapi.yml
@@ -38,6 +38,41 @@ paths:
                 title: "invalid-request"
                 detail: "Invalid values sent in the request"
   /products/{id}:
+    get:
+      summary: Retrieve a product by ID
+      operationId: getProduct
+      tags:
+        - Products
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+          description: Product unique identifier
+        - in: query
+          name: currency
+          schema:
+            type: string
+          required: false
+          description: Currency code to convert product price (example, DOP, EUR, USD)
+      responses:
+        '200':
+          description: Product retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductResponse'
+        '404':
+          description: The specified product was not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                code: 404
+                title: "resource-not-found"
+                detail: "The resource can't be found"
     patch:
       summary: Update an existing product
       operationId: updateProduct
@@ -56,7 +91,7 @@ paths:
             schema:
               $ref: '#/components/schemas/ProductRequest'
       responses:
-        '201':
+        '200':
           description: Product update successfully
           content:
             application/json:
@@ -73,7 +108,7 @@ paths:
                 title: "invalid-request"
                 detail: "Invalid values sent in the request"
         '404':
-          description: The specified product resource was not found
+          description: The specified product was not found
           content:
             application/json:
               schema:
@@ -82,7 +117,30 @@ paths:
                 code: 404
                 title: "resource-not-found"
                 detail: "The resource can't be found"
-
+    delete:
+      summary: Delete a product
+      operationId: deleteProduct
+      tags:
+        - Products
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: string
+      responses:
+        '204':
+          description: Product deleted successfully
+        '404':
+          description: The specified product was not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+              example:
+                code: 404
+                title: "resource-not-found"
+                detail: "The resource can't be found"
 components:
   schemas:
     ProductRequest:
